--- a/starter-code/src/App.css
+++ b/starter-code/src/App.css
@@ -22,6 +22,20 @@
   font-size: large;
 }
 
+
+.button-add{
+  display: flex;
+  margin-left: 500px;
+}
+
+.form-add{
+  display: flex;
+  padding: 40px;
+  justify-content: center;
+  border-radius: 20px;
+  text-align: center;  
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
